app-in-apps/yaml/ollama/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama-ingress
  namespace: ollama
  labels:
    app.kubernetes.io/name: ollama
  annotations:
    kubernetes.io/ingress.class: tailscale
spec:
  ingressClassName: tailscale
  rules:
    - host: ollama.border-orfe.ts.net
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: my-ollama
                port:
                  name: 11434
  tls:
    - hosts:
        - ollama.border-orfe.ts.net
